# Team-11-Project-main

./: README.md  pyproject.toml
agricultural_informatization/: README.md  app.py  init.sql  main.py  mqtt.py  start_sensors_publisher.py
agricultural_informatization/.specstory/history/: 2025-03-04_20-25-完善简历中的实习经历描述.md
agricultural_informatization/models/: agri_mach_models.py  field_models.py  llm_models.py  response_models.py  sensor_data_models.py  sensor_models.py  user_models.py
agricultural_informatization/routers/: llm_router.py  sensor_router.py  user_router.py
agricultural_informatization/routers/agri_mach/: __init__.py
agricultural_informatization/routers/field/: __init__.py  fertilization.py  sensor_data.py
agricultural_informatization/sensors/: __init__.py  air.py  config.py  headwaters.py  log.py  models.py  sensor.py  soil.py
agricultural_informatization/utils/: __init__.py  config.py  db.py  hooks.py  llm.py  log.py  permission.py  user.py
